@@ -23,9 +23,11 @@ import static org.opensearch.sql.data.type.ExprCoreType.STRING;
 import static org.opensearch.sql.data.type.ExprCoreType.STRUCT;
 import static org.opensearch.sql.data.type.ExprCoreType.UNDEFINED;
 import static org.opensearch.sql.expression.function.BuiltinFunctionName.CAST_TO_BOOLEAN;
+import static org.opensearch.sql.expression.function.BuiltinFunctionRepository.DEFAULT_NAMESPACE;
 
 import com.google.common.collect.ImmutableList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.commons.lang3.StringUtils;
@@ -46,10 +48,17 @@ import org.opensearch.sql.expression.env.Environment;
 
 @ExtendWith(MockitoExtension.class)
 class BuiltinFunctionRepositoryTest {
+
+  public static final String TEST_NAMESPACE = "TEST";
+
   @Mock
   private DefaultFunctionResolver mockfunctionResolver;
   @Mock
+  private Map<String, Map<FunctionName, FunctionResolver>> mockNamespaceMap;
+  @Mock
   private Map<FunctionName, FunctionResolver> mockMap;
+  @Mock
+  FunctionProperties functionProperties;
   @Mock
   private FunctionName mockFunctionName;
   @Mock
@@ -65,15 +74,31 @@ class BuiltinFunctionRepositoryTest {
 
   @BeforeEach
   void setUp() {
-    repo = new BuiltinFunctionRepository(mockMap);
+    repo = new BuiltinFunctionRepository(mockNamespaceMap);
   }
 
   @Test
   void register() {
-    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockMap);
+    when(mockNamespaceMap.get(DEFAULT_NAMESPACE)).thenReturn(mockMap);
+    when(mockNamespaceMap.containsKey(DEFAULT_NAMESPACE)).thenReturn(true);
     when(mockfunctionResolver.getFunctionName()).thenReturn(mockFunctionName);
+    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockNamespaceMap);
     repo.register(mockfunctionResolver);
 
+    verify(mockMap, times(1)).put(mockFunctionName, mockfunctionResolver);
+  }
+
+  @Test
+  void register_under_datasource_namespace() {
+    when(mockNamespaceMap.containsKey(TEST_NAMESPACE)).thenReturn(false);
+    when(mockNamespaceMap.put(eq(TEST_NAMESPACE), any())).thenReturn(null);
+    when(mockNamespaceMap.get(TEST_NAMESPACE)).thenReturn(mockMap);
+    when(mockfunctionResolver.getFunctionName()).thenReturn(mockFunctionName);
+    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockNamespaceMap);
+    repo.register(TEST_NAMESPACE, mockfunctionResolver);
+
+    verify(mockNamespaceMap, times(1)).put(eq(TEST_NAMESPACE), any());
+    verify(mockNamespaceMap, times(1)).get(TEST_NAMESPACE);
     verify(mockMap, times(1)).put(mockFunctionName, mockfunctionResolver);
   }
 
@@ -84,13 +109,37 @@ class BuiltinFunctionRepositoryTest {
     when(mockfunctionResolver.getFunctionName()).thenReturn(mockFunctionName);
     when(mockfunctionResolver.resolve(any())).thenReturn(
         Pair.of(functionSignature, functionExpressionBuilder));
-    when(mockMap.containsKey(any())).thenReturn(true);
-    when(mockMap.get(any())).thenReturn(mockfunctionResolver);
-    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockMap);
+    when(mockNamespaceMap.get(DEFAULT_NAMESPACE)).thenReturn(mockMap);
+    when(mockNamespaceMap.containsKey(DEFAULT_NAMESPACE)).thenReturn(true);
+    when(mockMap.containsKey(mockFunctionName)).thenReturn(true);
+    when(mockMap.get(mockFunctionName)).thenReturn(mockfunctionResolver);
+    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockNamespaceMap);
     repo.register(mockfunctionResolver);
 
-    repo.compile(mockFunctionName, Arrays.asList(mockExpression));
-    verify(functionExpressionBuilder, times(1)).apply(any());
+    repo.compile(functionProperties, mockFunctionName, Arrays.asList(mockExpression));
+    verify(functionExpressionBuilder, times(1))
+        .apply(eq(functionProperties), any());
+  }
+
+
+  @Test
+  void compile_function_under_datasource_namespace() {
+    when(mockExpression.type()).thenReturn(UNDEFINED);
+    when(functionSignature.getParamTypeList()).thenReturn(Arrays.asList(UNDEFINED));
+    when(mockfunctionResolver.getFunctionName()).thenReturn(mockFunctionName);
+    when(mockfunctionResolver.resolve(any())).thenReturn(
+        Pair.of(functionSignature, functionExpressionBuilder));
+    when(mockNamespaceMap.get(TEST_NAMESPACE)).thenReturn(mockMap);
+    when(mockNamespaceMap.containsKey(TEST_NAMESPACE)).thenReturn(true);
+    when(mockMap.containsKey(mockFunctionName)).thenReturn(true);
+    when(mockMap.get(mockFunctionName)).thenReturn(mockfunctionResolver);
+    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockNamespaceMap);
+    repo.register(TEST_NAMESPACE, mockfunctionResolver);
+
+    repo.compile(functionProperties, TEST_NAMESPACE, mockFunctionName,
+        Arrays.asList(mockExpression));
+    verify(functionExpressionBuilder, times(1))
+        .apply(eq(functionProperties), any());
   }
 
   @Test
@@ -100,20 +149,25 @@ class BuiltinFunctionRepositoryTest {
     when(mockfunctionResolver.getFunctionName()).thenReturn(mockFunctionName);
     when(mockfunctionResolver.resolve(functionSignature)).thenReturn(
         Pair.of(functionSignature, functionExpressionBuilder));
+    when(mockNamespaceMap.get(DEFAULT_NAMESPACE)).thenReturn(mockMap);
+    when(mockNamespaceMap.containsKey(DEFAULT_NAMESPACE)).thenReturn(true);
     when(mockMap.containsKey(mockFunctionName)).thenReturn(true);
     when(mockMap.get(mockFunctionName)).thenReturn(mockfunctionResolver);
-    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockMap);
+    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockNamespaceMap);
     repo.register(mockfunctionResolver);
 
-    assertEquals(functionExpressionBuilder, repo.resolve(functionSignature));
+    assertEquals(functionExpressionBuilder, repo.resolve(
+        Collections.singletonList(DEFAULT_NAMESPACE), functionSignature));
   }
 
   @Test
   void resolve_should_not_cast_arguments_in_cast_function() {
     when(mockExpression.toString()).thenReturn("string");
     FunctionImplementation function =
-        repo.resolve(registerFunctionResolver(CAST_TO_BOOLEAN.getName(), DATETIME, BOOLEAN))
-            .apply(ImmutableList.of(mockExpression));
+        repo.resolve(
+                Collections.singletonList(DEFAULT_NAMESPACE),
+                registerFunctionResolver(CAST_TO_BOOLEAN.getName(), DATETIME, BOOLEAN))
+            .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("cast_to_boolean(string)", function.toString());
   }
 
@@ -122,8 +176,10 @@ class BuiltinFunctionRepositoryTest {
     when(mockFunctionName.getFunctionName()).thenReturn("mock");
     when(mockExpression.toString()).thenReturn("string");
     FunctionImplementation function =
-        repo.resolve(registerFunctionResolver(mockFunctionName, STRING, STRING))
-            .apply(ImmutableList.of(mockExpression));
+        repo.resolve(
+                Collections.singletonList(DEFAULT_NAMESPACE),
+                registerFunctionResolver(mockFunctionName, STRING, STRING))
+            .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(string)", function.toString());
   }
 
@@ -132,8 +188,10 @@ class BuiltinFunctionRepositoryTest {
     when(mockFunctionName.getFunctionName()).thenReturn("mock");
     when(mockExpression.toString()).thenReturn("byte");
     FunctionImplementation function =
-        repo.resolve(registerFunctionResolver(mockFunctionName, BYTE, INTEGER))
-            .apply(ImmutableList.of(mockExpression));
+        repo.resolve(
+                Collections.singletonList(DEFAULT_NAMESPACE),
+                registerFunctionResolver(mockFunctionName, BYTE, INTEGER))
+            .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(byte)", function.toString());
   }
 
@@ -148,8 +206,8 @@ class BuiltinFunctionRepositoryTest {
     registerFunctionResolver(CAST_TO_BOOLEAN.getName(), STRING, STRING);
 
     FunctionImplementation function =
-        repo.resolve(signature)
-            .apply(ImmutableList.of(mockExpression));
+        repo.resolve(Collections.singletonList(DEFAULT_NAMESPACE), signature)
+            .apply(functionProperties, ImmutableList.of(mockExpression));
     assertEquals("mock(cast_to_boolean(string))", function.toString());
   }
 
@@ -157,20 +215,26 @@ class BuiltinFunctionRepositoryTest {
   void resolve_should_throw_exception_for_unsupported_conversion() {
     ExpressionEvaluationException error =
         assertThrows(ExpressionEvaluationException.class, () ->
-            repo.resolve(registerFunctionResolver(mockFunctionName, BYTE, STRUCT))
-                .apply(ImmutableList.of(mockExpression)));
+            repo.resolve(
+                    Collections.singletonList(DEFAULT_NAMESPACE),
+                    registerFunctionResolver(mockFunctionName, BYTE, STRUCT))
+                .apply(functionProperties, ImmutableList.of(mockExpression)));
     assertEquals(error.getMessage(), "Type conversion to type STRUCT is not supported");
   }
 
   @Test
   @DisplayName("resolve unregistered function should throw exception")
   void resolve_unregistered() {
-    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockMap);
+    when(mockNamespaceMap.get(DEFAULT_NAMESPACE)).thenReturn(mockMap);
+    when(mockNamespaceMap.containsKey(DEFAULT_NAMESPACE)).thenReturn(true);
     when(mockMap.containsKey(any())).thenReturn(false);
+    BuiltinFunctionRepository repo = new BuiltinFunctionRepository(mockNamespaceMap);
     repo.register(mockfunctionResolver);
 
     ExpressionEvaluationException exception = assertThrows(ExpressionEvaluationException.class,
-        () -> repo.resolve(new FunctionSignature(FunctionName.of("unknown"), Arrays.asList())));
+        () -> repo.resolve(
+            Collections.singletonList(DEFAULT_NAMESPACE),
+            new FunctionSignature(FunctionName.of("unknown"), List.of())));
     assertEquals("unsupported function name: unknown", exception.getMessage());
   }
 
@@ -185,6 +249,8 @@ class BuiltinFunctionRepositoryTest {
     DefaultFunctionResolver funcResolver = mock(DefaultFunctionResolver.class);
     FunctionBuilder funcBuilder = mock(FunctionBuilder.class);
 
+    when(mockNamespaceMap.get(DEFAULT_NAMESPACE)).thenReturn(mockMap);
+    when(mockNamespaceMap.containsKey(DEFAULT_NAMESPACE)).thenReturn(true);
     when(mockMap.containsKey(eq(funcName))).thenReturn(true);
     when(mockMap.get(eq(funcName))).thenReturn(funcResolver);
     when(funcResolver.resolve(eq(unresolvedSignature))).thenReturn(
@@ -193,8 +259,8 @@ class BuiltinFunctionRepositoryTest {
 
     // Relax unnecessary stubbing check because error case test doesn't call this
     lenient().doAnswer(invocation ->
-        new FakeFunctionExpression(funcName, invocation.getArgument(0))
-    ).when(funcBuilder).apply(any());
+        new FakeFunctionExpression(funcName, invocation.getArgument(1))
+    ).when(funcBuilder).apply(eq(functionProperties), any());
     return unresolvedSignature;
   }
 
